--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -161,7 +161,7 @@
 
 
     <p class="h3">Accompaniment Arrangement Demo</p>
-    <p class='text-justify'>Given an input lead sheet, our system is capable of accompaniment arrangement in a flexible <b><em>multi-track</em></b> form with extended <b><em>whole-song</em></b> structure. The multi-track arrangement is orchestrated from an intermediate piano arrangement, which also aligns with musicians' creative workflow. Our demos are presented with three tabs as follows, each showcasing <em>1) the multi-track arrangement</em>, <em>2) the piano arrangement</em>, and <em>3) the input lead sheet</em>. We visualize MIDI using <a href="https://cifkao.github.io/html-midi-player/" target="_blank">html-midi-player</a> and synthesize audio using <a href="https://www.native-instruments.com/en/specials/komplete/kontakt-factory-library-2/" target="_blank">Kontakt Factory Library 2</a>.
+    <p class='text-justify'>Given an input lead sheet, our system performs accompaniment arrangement in a flexible <b><em>multi-track</em></b> form with extended <b><em>whole-song</em></b> structure. The multi-track arrangement is orchestrated from an intermediate piano arrangement, which also aligns with musicians' creative workflow. Our demos are presented with three tabs as follows: <em>1) the multi-track arrangement</em>, <em>2) the piano arrangement</em>, and <em>3) the input lead sheet</em>. <!--We visualize MIDI using <a href="https://cifkao.github.io/html-midi-player/" target="_blank">html-midi-player</a> and synthesize audio using <a href="https://www.native-instruments.com/en/specials/komplete/kontakt-factory-library-2/" target="_blank">Kontakt Factory Library 2</a>.-->
     </p>
 
     <p class='text-justify'></p>
