--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -170,7 +170,7 @@
       <li>Genre: Pop</li>
       <li>Length: 60 bars</li>
       <li>BPM: 70</li>
-      <li>Instrumentation: Clarinet, Celesta, Acoustic guitar (2), Electric Piano (2), Acoustic Piano, Violin, Brass Section, and Electric Bass.</li>
+      <li>Instrumentation: <em style="color: #2ca02c;">Celesta</em>, <em style="color: #07e1e9;">Acoustic guitar</em>, <em style="color: #98df8a;">Electric Piano</em>, <em style="color: #1f77b4;">Acoustic Piano</em>, <em style="color: #8c564b;">Violin</em>, <em style="color: #ff7f0e;">Brass Section</em>, and <em style="color: #9467bd;">Electric Bass</em>.</li>
     </ul>
     <div class="tabs">
       <div class="tabby-tab">
@@ -301,7 +301,7 @@
     <li>Genre: Pop</li>
     <li>Length: 90 bars</li>
     <li>BPM: 140</li>
-    <li>Instrumentation: Alto Saxophone, Organ, Choir and Voice, Jazz Guitar (2), Violin, Acoustic Piano, and Acoustic Bass.</li>
+    <li>Instrumentation: <em style="color: #ffbb78;">Organ</em>, <em style="color: #bcbd22;">Choir and Voice</em>, <em style="color: #07e1e9;">Jazz Guitar</em>, <em style="color: #8c564b;">Violin</em>, <em style="color: #1f77b4;">Acoustic Piano</em>, and <em style="color: #9467bd;">Acoustic Bass</em>.</li>
   </ul>
   <div class="tabs">
     <div class="tabby-tab">
@@ -382,7 +382,7 @@
     <li>Genre: Musical</li>
     <li>Length: 32 bars</li>
     <li>BPM: 70 </li>
-    <li>Instrumentation: Trumpet, Oboe, Choir and Voice, String Ensemble, Electric Piano (2), Acoustic Piano, Acoustic Guitar, Electric Bass, and Acoustic Bass.</li>
+    <li>Instrumentation: <em style="color: #bcbd22;">Oboe</em>, <em style="color: #98df8a;">Choir and Voice</em>, <em style="color: #e377c2;">String Ensembles</em>, <em style="color: #ffbb78;">Electric Piano</em>, <em style="color: #1f77b4;">Acoustic Piano</em>, <em style="color: #07e1e9;">Acoustic Guitar</em>, <em style="color: #9467bd;">Electric Bass</em>, and <em style="color: #8c564b;">Acoustic Bass</em>.</li>
   </ul>
   <div class="tabs">
     <div class="tabby-tab">
@@ -465,7 +465,7 @@
     <li>Genre: Jazz</li>
     <li>Length: 36 bars</li>
     <li>BPM: 120 </li>
-    <li>Instrumentation: Electric Piano (2), Acoustic Piano (2), Acoustic Guitar, and Acoustic Bass.</li>
+    <li>Instrumentation: <em style="color: #2ca02c;">Electric Piano</em>, <em style="color: #1f77b4;">Acoustic Piano</em>, <em style="color: #07e1e9;">Acoustic Guitar</em>, and <em style="color: #9467bd;">Acoustic Bass</em>.</li>
   </ul>
   <div class="tabs">
     <div class="tabby-tab">
@@ -546,7 +546,7 @@
     <li>Genre: Jazz</li>
     <li>Length: 44 bars</li>
     <li>BPM: 120 </li>
-    <li>Instrumentation: Trumpet, Organ, Choir and Voice, Clarinet, Electric Piano, Acoustic Guitar, Cello, Violin, and Acoustic Bass.</li>
+    <li>Instrumentation: <em style="color: #ffbb78;">Organ</em>, <em style="color: #ff7f0e;">Choir and Voice</em>, <em style="color: #bcbd22;">Clarinet</em>, <em style="color: #2ca02c;">Electric Piano</em>, <em style="color: #07e1e9;">Acoustic Guitar</em>, <em style="color: #e377c2;">Violin</em>, and <em style="color: #8c564b;">Cello</em>.</li>
   </ul>
   <div class="tabs">
     <div class="tabby-tab">
