--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -1220,7 +1220,7 @@
       <li>Genre: Folk</li>
       <li>Length: 67 bars</li>
       <li>BPM: 70</li>
-      <li>Instrumentation: <em style="color: #2ca02c;">Celesta</em>, <em style="color: #07e1e9;">Acoustic guitar</em>, <em style="color: #bcbd22;">Jazz Guitar</em>, <em style="color: #ffbb78;">Electric Piano</em>, <em style="color: #e377c2;">Strings</em>, <em style="color: #ff7f0e;">French Horn</em>, <em style="color: #8c564b;">Clarinet</em>, and <em style="color: #9467bd;">Electric Bass</em>.</li>
+      <li>Instrumentation: <em style="color: #2ca02c;">Celesta</em>, <em style="color: #07e1e9;">Acoustic guitar</em>, <em style="color: #bcbd22;">Jazz Guitar</em>, <em style="color: #ffbb78;">Electric Piano</em>, <em style="color: #e377c2;">String Ensembles</em>, <em style="color: #ff7f0e;">Brass Section</em>, <em style="color: #8c564b;">Clarinet</em>, and <em style="color: #9467bd;">Electric Bass</em>.</li>
     </ul>
     <div class="tabs">
       <div class="tabby-tab">
@@ -1277,7 +1277,7 @@
       <li>Genre: Anime</li>
       <li>Length: 42 bars</li>
       <li>BPM: 100</li>
-      <li>Instrumentation: <em style="color: #2ca02c;">Celesta</em>, <em style="color: #ffbb78;">Electric Piano</em>, <em style="color: #ff7f0e;">Trumpet</em>, <em style="color: #e377c2;">Strings</em>, <em style="color: #07e1e9;">Acoustic Guitar</em>, and <em style="color: #9467bd;">Electric Bass</em>.</li>
+      <li>Instrumentation: <em style="color: #2ca02c;">Celesta</em>, <em style="color: #ffbb78;">Electric Piano</em>, <em style="color: #ff7f0e;">Trumpet</em>, <em style="color: #e377c2;">String Ensembles</em>, <em style="color: #07e1e9;">Acoustic Guitar</em>, and <em style="color: #9467bd;">Electric Bass</em>.</li>
     </ul>
     <div class="tabs">
       <div class="tabby-tab">
@@ -1334,7 +1334,7 @@
       <li>Genre: Pop</li>
       <li>Length: 69 bars</li>
       <li>BPM: 70</li>
-      <li>Instrumentation: <em style="color: #07e1e9;">Acoustic Guitar</em>, <em style="color: #ffbb78;">Jazz Guitar</em>, <em style="color: #e377c2;">Strings</em>, <em style="color: #1f77b4;">Acoustic Piano</em>, and <em style="color: #9467bd;">Electric Bass</em>.</li>
+      <li>Instrumentation: <em style="color: #07e1e9;">Acoustic Guitar</em>, <em style="color: #ffbb78;">Jazz Guitar</em>, <em style="color: #e377c2;">String Ensembles</em>, <em style="color: #1f77b4;">Acoustic Piano</em>, and <em style="color: #9467bd;">Electric Bass</em>.</li>
     </ul>
     <div class="tabs">
       <div class="tabby-tab">
@@ -1391,7 +1391,7 @@
       <li>Genre: Pop</li>
       <li>Length: 71 bars</li>
       <li>BPM: 70</li>
-      <li>Instrumentation: <em style="color: #e377c2;">Strings</em>, <em style="color: #ffbb78;">Electric Piano</em>, <em style="color: #17becf;">Clarinet</em>, <em style="color: #98df8a;">Choir and Voice</em>, <em style="color: #07e1e9;">Acoustic Guitar</em>, and <em style="color: #9467bd;">Electric Bass</em>.</li>
+      <li>Instrumentation: <em style="color: #e377c2;">String Ensembles</em>, <em style="color: #ffbb78;">Electric Piano</em>, <em style="color: #17becf;">Clarinet</em>, <em style="color: #98df8a;">Choir and Voice</em>, <em style="color: #07e1e9;">Acoustic Guitar</em>, and <em style="color: #9467bd;">Electric Bass</em>.</li>
     </ul>
     <div class="tabs">
       <div class="tabby-tab">
