--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -1277,7 +1277,7 @@
       <li>Genre: Anime</li>
       <li>Length: 42 bars</li>
       <li>BPM: 100</li>
-      <li>Instrumentation: <em style="color: #2ca02c;">Celesta</em>, <em style="color: #ffbb78;">Electric Piano</em>, <em style="color: #ff7f0e;">Trumpet</em>, <em style="color: #e377c2;">String Ensembles</em>, <em style="color: #07e1e9;">Acoustic Guitar</em>, and <em style="color: #9467bd;">Electric Bass</em>.</li>
+      <li>Instrumentation: <em style="color: #2ca02c;">Celesta</em>, <em style="color: #ffbb78;">Electric Piano</em>, <em style="color: #ff7f0e;">Trumpet</em>, <em style="color: #e377c2;">Violin</em>, <em style="color: #07e1e9;">Acoustic Guitar</em>, and <em style="color: #9467bd;">Electric Bass</em>.</li>
     </ul>
     <div class="tabs">
       <div class="tabby-tab">
