--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -889,6 +889,16 @@
   </div>
 
 
+  <div class="container no-gutter small-padding" id="arr_demo">  
+    <div class="col-lg-12 text-center"><p class="h1"><hr class="primary"></p></div>
+    <p class="h3">More Demos</p>
+    <ul>
+      <li><p><a href="comparison_to_baselines">Comparison to Baselines</a></p></li>
+      <li><p><a href="ablation_study">Ablation Study on Style Prior Architecture</a></p></li>
+    </ul>
+  </div>
+
+
 
   <div class="container no-gutter small-padding">
     <p class="h1"><hr class="primary"></p>
