--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -902,7 +902,7 @@
 
   <div class="container no-gutter small-padding">
     <p class="h1"><hr class="primary"></p>
-    <h5>This page uses <a href="https://cifkao.github.io/html-midi-player/" target="_blank">html-midi-player</a> for MIDI visiualization and uses <a href="https://www.native-instruments.com/en/specials/komplete/kontakt-factory-library-2/" target="_blank">Kontakt Factory Library 2</a> and <a href="https://www.bandlab.com/" target="_blank">BandLab</a> for MIDI-to-audio synthesis.</h5>
+    <h5>This site leverages <a href="https://volny.github.io/creative-theme-jekyll/" target="_blank">the jekyll template</a> and uses <a href="https://cifkao.github.io/html-midi-player/" target="_blank">html-midi-player</a> for MIDI visiualization and <a href="https://www.native-instruments.com/ni-tech-manuals/kontakt-factory-library-manual/en/welcome-to-the-kontakt-factory-library-2" target="_blank">Kontakt Factory Library 2</a>/<a href="https://www.bandlab.com/" target="_blank">BandLab</a> for MIDI-to-audio synthesis.</h5>
   </div>
 
 </section>
