--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -346,7 +346,7 @@
   <p class='text-justify'></p>
   <p class="h4"><b style="color:#6c06c0;">[Demo-03]</b> <b>Over the Rainbow</b></p>
   <ul>
-    <li>Genre: Musical</li>
+    <li>Genre: Ballad</li>
     <li>Length: 32 bars</li>
     <li>BPM: 70 </li>
     <li>Instrumentation: <em style="color: #bcbd22;">Oboe</em>, <em style="color: #98df8a;">Choir Aahs</em>, <em style="color: #e377c2;">String Ensembles</em>, <em style="color: #ffbb78;">Electric Pianos</em>, <em style="color: #1f77b4;">Acoustic Piano</em>, <em style="color: #07e1e9;">Acoustic Guitar</em>, <em style="color: #9467bd;">Electric Bass</em>, and <em style="color: #8c564b;">Contrabass</em>.</li>
